fixes bug, navbar button not aligned properly

--- a/style.css
+++ b/style.css
@@ -85,6 +85,9 @@ nav {
   padding: 1em;
 }
 
+.menu-bar {
+  display: none;
+}
 nav ul.main-nav li {
   color: var(--grayish-blue);
   margin-right: 2em;
